# ua-holidays-ics

./: .gitignore  .pre-commit-config.yaml  README.md  calendar.ics  pyproject.toml
.github/workflows/: update_calendar.yml
src/app/: ics.py  main.py  schemas.py
src/app/parsers/: base.py  parser.py
