[project]
name = "ua-holidays-ics"
version = "0.1.0"
description = "A script to scrape official Ukrainian holidays and generate an .ics calendar file."
readme = "README.md"
requires-python = ">=3.14"
license = "GPL-3.0-only"
authors = [{ name = "Skrriply" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/Skrriply/ua-holidays-ics"
Issues = "https://github.com/Skrriply/ua-holidays-ics/issues"
Repository = "https://github.com/Skrriply/ua-holidays-ics.git"
